<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2016-2017 AOSiP
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
       http://www.apache.org/licenses/LICENSE-2.0
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- PE custom settings main -->
    <string name="header_category_personalization">UI settings</string>
    <string name="goodies_title">PixelGoodies</string>
    <string name="pe_title">PE GOODIES Settings</string>
    <string name="pixelgoodies_settings_title">Categories</string>

    <!-- General strings -->
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="enabled">Enabled</string>
    <string name="default_string">Default</string>
    <string name="add">Add</string>
    <string name="choose_app">Choose app</string>

    <!-- PixelGoodies Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>

    <!--PixelGoodies statusbar-->
    <string name="statusbar_bar_title">Statusbar</string>
    <string name="statusbar_bar_summary">Adjust various statusbar elements</string>
    <string name="clock_category">Clock</string>
    <string name="battery_category">Battery</string>
    <string name="icon_category">Icons</string>

    <!-- Status bar clock and date options -->
    <string name="status_bar_style_title">Style</string>
    <string name="status_bar_clock">Clock &amp; Date</string>
    <string name="clock_enabled">Enabled</string>
    <string name="clock_disabled">Disabled</string>
    <string name="status_bar_clock_style_reset">Reset color</string>
    <string name="status_bar_show_clock_title">Show clock &amp; date</string>
    <string name="status_bar_am_pm_title">AM/PM</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="enable_clock_weekday">Day of the week</string>
    <string name="enable_clock_weekday_summary">Abbreviated day of the week before the time</string>
    <string name="dont_show">Don\'t show</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_display_summary">Display custom date before the clock</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="am_pm_clock_normal">Normal font size</string>
    <string name="am_pm_clock_small">Small font size</string>
    <string name="am_pm_clock_none">Don\'t show</string>
    <string name="clock_date_display_none">Don\'t show</string>
    <string name="clock_date_display_small">Small font size</string>
    <string name="clock_date_display_normal">Normal font size</string>
    <string name="clock_date_style_normal">Normal</string>
    <string name="clock_date_style_lowercase">Lowercase</string>
    <string name="clock_date_style_uppercase">Uppercase</string>
    <string name="clock_date_right">Right of time</string>
    <string name="clock_date_left">Left of time</string>
    <string name="clock_date_position">Date position</string>

    <!-- Battery Styles -->
    <string name="battery_style_category_title">Battery level</string>
    <string name="battery_percent_title">Battery percent</string>

    <!-- Status bar - Battery -->
    <string name="status_bar_battery_style_title">Battery style</string>
    <string name="status_bar_battery_style_q">Icon portrait (default)</string>
    <string name="status_bar_battery_style_dotted_circle">Dotted circle</string>
    <string name="status_bar_battery_style_circle">Filled circle</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="status_bar_battery_style_hidden">Hidden</string>

    <!-- Status bar - Battery percentage -->
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden (default)</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
    <string name="status_bar_battery_text_charging_title">Battery percentage when charging</string>
    <string name="status_bar_battery_text_charging_summary">Always display battery percentage when charging</string>

    <!-- Battery mode -->
    <string name="battery_percentage_title">Battery percentage</string>
    <string name="battery_percentage_off">Disabled</string>
    <string name="battery_percentage_next">Enabled</string>
    <string name="battery_percentage_inside">Enabled (inside icon)</string>
    <string name="battery_percentage_estimate">Enabled (estimate)</string>

    <!--PixelGoodies Notification-->
    <string name="notification_title">Notification</string>
    <string name="notification_summary">Adjust LEDs and notification behavior</string>
    <string name="notification_category">Notifications</string>
    <string name="headsup_category">Heads Up</string>

    <!-- Heads up -->
    <string name="heads_up_summary_enabled">Pop-up notifications are enabled</string>
    <string name="heads_up_summary_disabled">Pop-up notifications are disabled</string>

    <!--PixelGoodies Quick settings-->
    <string name="quicksettings_title">Quick Settings</string>
    <string name="quicksettings_summary">Manage your quick tiles and expanded statusbar</string>
    <string name="expanded_category">Expanded</string>

    <!-- Quick Settings brightness slider -->
    <string name="qs_brightness_category_title">Brightness slider options</string>
    <string name="qs_show_brightness_title">Brightness slider</string>
    <string name="qs_show_brightness_summary">Show a brightness slider in the quick settings panel</string>
    <string name="qs_brightness_position_bottom_title">Brightness slider on bottom</string>
    <string name="qs_brightness_position_bottom_summary">Show a brightness slider on bottom quick settings</string>

    <!-- Brightness icon-->
    <string name="brightness_icon_title">Brightness icon</string>
    <string name="brightness_icon_summary">Show a brightness icon to the right of the brighness slider to adjust auto-brightness</string>


    <!--PixelGoodies navigation-->
    <string name="navigation_title">Navigation</string>
    <string name="navigation_category">Navigation</string>
    <string name="navigation_summary">Customize navigation bar style and behavior</string>

    <!-- Navbar options -->
    <string name="navbar_invert_layout_title">Invert layout</string>

    <!--PixelGoodies buttons-->
    <string name="buttons_title">Hardware buttons</string>
    <string name="buttons_summary">Tweak the actions of your devices physical buttons</string>
    <string name="power_button_category">Power</string>
    <string name="volume_category">Volume</string>

    <!-- Power menu -->
    <string name="powermenu_reboot_title">Restart</string>
    <string name="powermenu_advanced_restart_title">Advanced restart</string>
    <string name="powermenu_advanced_restart_summary">Enables the advanced restart menu for other restarting options</string>
    <string name="powermenu_lockdown_title">Lockdown</string>
    <string name="powermenu_screenshot_title">Screenshot</string>
    <string name="powermenu_screenrecord_title">Screenrecord</string>

    <!--PixelGoodies recentscreen-->
    <string name="recent_title">Recents</string>
    <string name="recent_summary">Configure which recents style and options</string>
    <string name="stock_recent">Stock</string>

    <!--PixelGoodies Gestures-->
    <string name="gesture_category">Gesture</string>
    <string name="gesture_summary">Gesture based options/actions</string>
    <string name="aosp_gesture_title">AOSP Gestures</string>

    <!--PixelGoodies lockscreen-->
    <string name="lockscreen_title">Lockscreen</string>
    <string name="lockscreen_summary">Customize lockscreen layout and options</string>
    <string name="weather_category">Weather</string>
    <string name="options_category">Various</string>

    <!--PixelGoodies advanced-->
    <string name="advanced_title">Advanced Settings</string>
    <string name="advanced_summary">Misc and extra system settings</string>
    <string name="system_category">System Settings</string>
    <string name="theming_title">Theming</string>
    <string name="theme_select_title">Themes</string>
    <string name="theme_select_summary">Browse and select installed themes</string>


    <!-- Three-fingers-swipe to screenshot -->
    <string name="three_finger_gesture">Swipe to screenshot</string>
    <string name="three_finger_gesture_summary">Swipe down with three fingers to take a screenshot</string>

</resources>
