<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2015-2018 Android Open Source Illusion Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/pixelgoodies_title">

    <PreferenceScreen
       android:key="status_bar"
       android:fragment="com.pe.pixelgoodies.statusbar.StatusbarHolder"
       android:title="@string/statusbar_bar_title"
       android:summary="@string/statusbar_bar_summary"
       android:icon="@drawable/ic_pixelgoodies_status_background" />

    <PreferenceScreen
       android:key="quicksettings"
       android:fragment="com.pe.pixelgoodies.quicksettings.QuickSettingsHolder"
       android:title="@string/quicksettings_title"
       android:summary="@string/quicksettings_summary"
       android:icon="@drawable/ic_pixelgoodies_qs_background" />

    <PreferenceScreen
       android:key="notification"
       android:fragment="com.pe.pixelgoodies.notification.NotificationHolder"
       android:title="@string/notification_title"
       android:summary="@string/notification_summary"
       android:icon="@drawable/ic_pixelgoodies_notif_background"/>

    <PreferenceScreen
       android:key="navigation"
       android:fragment="com.pe.pixelgoodies.navigation.NavigationHolder"
       android:title="@string/navigation_category"
       android:summary="@string/navigation_summary"
       android:icon="@drawable/ic_pixelgoodies_nav_background" />

    <PreferenceScreen
       android:key="buttons"
       android:fragment="com.pe.pixelgoodies.buttons.ButtonsHolder"
       android:title="@string/buttons_title"
       android:summary="@string/buttons_summary"
       android:icon="@drawable/ic_pixelgoodies_buttons_background" />

    <!--PreferenceScreen
       android:key="recent"
       android:fragment="com.pe.pixelgoodies.recent.RecentsHolder"
       android:title="@string/recent_title"
       android:summary="@string/recent_summary"
       android:icon="@drawable/ic_pixelgoodies_recents_background" / -->

    <PreferenceScreen
       android:key="lockscreen"
       android:fragment="com.pe.pixelgoodies.lockscreen.LockscreenHolder"
       android:title="@string/lockscreen_title"
       android:summary="@string/lockscreen_summary"
       android:icon="@drawable/ic_pixelgoodies_lockscreen_background" />

    <PreferenceScreen
       android:key="gesture"
       android:fragment="com.pe.pixelgoodies.gesture.GestureHolder"
       android:title="@string/gesture_category"
       android:summary="@string/gesture_summary"
       android:icon="@drawable/ic_pixelgoodies_gesture_background" />

    <PreferenceScreen
       android:key="advanced"
       android:fragment="com.pe.pixelgoodies.advanced.AdvancedHolder"
       android:title="@string/advanced_title"
       android:summary="@string/advanced_summary"
       android:icon="@drawable/ic_pixelgoodies_advanced_background" />

</PreferenceScreen>
